--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    
+    <ul></ul>
+      <li><a href="recipes/kungpaotofu.html">Kung Pao Tofu</a></li>
+      <li><a href="recipes/chickenlemon.html">Chicken Breasts with Lemon</a></li>
+      <li><a href="recipes/greenscarrotginger.html">Crunchy Greens With Carrot-Ginger Dressing</a></li>
 </body>
 </html>
