Add classes, ids, css style

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="title">Odin Recipes</h1>
     
-    <ul></ul>
-      <li><a href="recipes/kungpaotofu.html">Kung Pao Tofu</a></li>
-      <li><a href="recipes/chickenlemon.html">Chicken Breasts with Lemon</a></li>
-      <li><a href="recipes/greenscarrotginger.html">Crunchy Greens With Carrot-Ginger Dressing</a></li>
+    <ul class="recipes">
+      <li id="tofu"><a href="recipes/kungpaotofu.html">Kung Pao Tofu</a></li>
+      <li id="chicken"><a href="recipes/chickenlemon.html">Chicken Breasts with Lemon</a></li>
+      <li id="salad"><a href="recipes/greenscarrotginger.html">Crunchy Greens With Carrot-Ginger Dressing</a></li>
+    </ul>
 </body>
 </html>
