--- a/recipes/chickenlemon.html
+++ b/recipes/chickenlemon.html
@@ -1,4 +1,6 @@
-<h1>Chicken Breasts with Lemon</h1>
+<link rel="stylesheet" href="../style.css">
+
+<h1 class="title">Chicken Breasts with Lemon</h1>
 
 <img src="chickenlemon.jpg">
 
