--- a/recipes/kungpaotofu.html
+++ b/recipes/kungpaotofu.html
@@ -1,4 +1,6 @@
-<h1>Kung Pao Tofu</h1>
+<link rel="stylesheet" href="../style.css">
+
+<h1 class="title">Kung Pao Tofu</h1>
   <img src="kungpaotofu.jpg">
 
   <h2>Description</h2>
