--- a/recipes/greenscarrotginger.html
+++ b/recipes/greenscarrotginger.html
@@ -1,4 +1,6 @@
-<h1>Crunchy Greens With Carrot-Ginger Dressing</h1>
+<link rel="stylesheet" href="../style.css">
+
+<h1 class="title">Crunchy Greens With Carrot-Ginger Dressing</h1>
 
 <img src="greenscarrotginger.jpg">
 
