Fix display issue with second list item

--- a/recipes/kungpaotofu.html
+++ b/recipes/kungpaotofu.html
@@ -43,7 +43,7 @@
     to 1 hour.</li>
     <li>While the tofu is pressed, prepare the sauce: In a medium bowl, whisk the soy sauce, 
     brown sugar, hoisin, rice wine, vinegar, sesame oil, white pepper, garlic, ginger, 2 
-    teaspoons cornstarch and ⅓ cup water until combined.</li>
+    teaspoons cornstarch and 1/3 cup water until combined.</li>
     <li>After the tofu has been pressed, unwrap it and cut into ¾-inch cubes. Transfer tofu 
     to a medium bowl, season with salt and coat in ¼ cup cornstarch; set aside.</li>
     <li>In a large cast-iron skillet over medium-high heat, add enough neutral oil to coat 
