--- a/recipes/kungpaotofu.html
+++ b/recipes/kungpaotofu.html
@@ -44,8 +44,8 @@
     <li>While the tofu is pressed, prepare the sauce: In a medium bowl, whisk the soy sauce, 
     brown sugar, hoisin, rice wine, vinegar, sesame oil, white pepper, garlic, ginger, 2 
     teaspoons cornstarch and 1/3 cup water until combined.</li>
-    <li>After the tofu has been pressed, unwrap it and cut into ¾-inch cubes. Transfer tofu 
-    to a medium bowl, season with salt and coat in ¼ cup cornstarch; set aside.</li>
+    <li>After the tofu has been pressed, unwrap it and cut into 3/4-inch cubes. Transfer tofu 
+    to a medium bowl, season with salt and coat in 1/4 cup cornstarch; set aside.</li>
     <li>In a large cast-iron skillet over medium-high heat, add enough neutral oil to coat 
     the bottom of the pan. When it starts shimmering, add the tofu. Cook until one side 
     is golden brown and crisp, about 3 minutes, then flip. Cook until the other side is 
